--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ hr {
 
 
   <div class="middle">
-    <img src="/logo.png" alt="CODLINE.AI" />
+    <img src="logo.png" alt="CODLINE.AI" />
     <h1>COMING SOON</h1>
 	<div id="cspio-socialprofiles">
 		<a href="" target="_blank"><i class="fa fa-instagram "style="color:black"></i></a>			
