Update and rename index (1).html to cod/index.html

--- a/cod/index.html
+++ b/cod/index.html
@@ -74,7 +74,7 @@ body {
     100% { left: 100px }
 }
 </style>   
- <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+ <link href="https://forms.gle/v1uYbRV1eW3JXuD89" rel="stylesheet">
 </head>
 <body>
  <div class="loading">
